// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SceneNodeInspectorPanel returns expected elements. SceneNode panel contains expected elements when none selected scene node. 1`] = `
<div>
  <div
    class="sc-gsFSXq dFvgUY"
    data-mocked="ExpandableSection"
  >
    <div>
      <div
        class="sc-dcJsrY ilhrxw"
      >
        <div
          data-mocked="TextContent"
        >
          <strong>
            Properties
          </strong>
        </div>
      </div>
    </div>
    <div
      data-mocked="Box"
      padding="{"left":"m","right":"m","top":"xxs","bottom":"xxs"}"
    >
      <div
        data-mocked="SpaceBetween"
      >
        <div
          data-mocked="TextContent"
        >
          <p>
            No node selected.
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SceneNodeInspectorPanel returns expected elements. SceneNode panel contains expected elements when selected scene node. 1`] = `
<div>
  <div
    style="overflow: auto;"
  >
    <div
      data-testid="AddComponentMenu"
    >
      [{},{}]
    </div>
    <div
      class="sc-gsFSXq dFvgUY"
      data-mocked="ExpandableSection"
    >
      <div>
        <div
          class="sc-dcJsrY ilhrxw"
        >
          <div
            data-mocked="TextContent"
          >
            <strong>
              Debug Info
            </strong>
          </div>
        </div>
      </div>
      <div
        data-mocked="Box"
        padding="{"left":"m","right":"m","top":"xxs","bottom":"xxs"}"
      >
        <div
          data-mocked="SpaceBetween"
        >
          <div
            data-mocked="FormField"
            label="Ref"
          >
            <div
              data-mocked="Input"
              disabled=""
              value="node-ref"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="sc-gsFSXq dFvgUY"
      data-mocked="ExpandableSection"
    >
      <div>
        <div
          class="sc-dcJsrY ilhrxw"
        >
          <div
            data-mocked="TextContent"
          >
            <strong>
              Properties
            </strong>
          </div>
        </div>
      </div>
      <div
        data-mocked="Box"
        padding="{"left":"m","right":"m","top":"xxs","bottom":"xxs"}"
      >
        <div
          data-mocked="SpaceBetween"
        >
          <div
            data-mocked="FormField"
            label="Name"
          >
            <div
              data-mocked="Input"
              data-testid="ip-3D-obj-ref-1"
              value="node-name"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="sc-gsFSXq dFvgUY"
      data-mocked="ExpandableSection"
    >
      <div>
        <div
          class="sc-dcJsrY ilhrxw"
        >
          <div
            data-mocked="TextContent"
          >
            <strong>
              Transform
            </strong>
          </div>
        </div>
      </div>
      <div
        data-mocked="Box"
        padding="{"left":"m","right":"m","top":"xxs","bottom":"xxs"}"
      >
        <div
          data-mocked="SpaceBetween"
        >
          <div
            data-mocked="Box"
          >
            <div
              data-mocked="Box"
              margin="{"bottom":"xxs"}"
            >
              <label
                id="Position_label"
              >
                Position
              </label>
            </div>
             
            <div
              data-mocked="Grid"
              griddefinition="[{"colspan":4},{"colspan":4},{"colspan":4}]"
            >
              <div
                class="sc-gEvEer dfsMpp"
              >
                <div
                  class="sc-fqkvVR bxVbvh"
                >
                  <div
                    data-mocked="TextContent"
                  >
                    <label
                      for="Position_input_X"
                    >
                      X
                    </label>
                     
                  </div>
                </div>
                <div
                  class="sc-iGgWBj kumTxJ"
                >
                  <div
                    arialabelledby="Position_input_X Position_label"
                    controlid="Position_input_X"
                    data-mocked="Input"
                    value="1.000"
                  />
                </div>
              </div>
              <div
                class="sc-gEvEer dfsMpp"
              >
                <div
                  class="sc-fqkvVR bxVbvh"
                >
                  <div
                    data-mocked="TextContent"
                  >
                    <label
                      for="Position_input_Y"
                    >
                      Y
                    </label>
                     
                  </div>
                </div>
                <div
                  class="sc-iGgWBj kumTxJ"
                >
                  <div
                    arialabelledby="Position_input_Y Position_label"
                    controlid="Position_input_Y"
                    data-mocked="Input"
                    disabled=""
                    value="1.000"
                  />
                </div>
              </div>
              <div
                class="sc-gEvEer dfsMpp"
              >
                <div
                  class="sc-fqkvVR bxVbvh"
                >
                  <div
                    data-mocked="TextContent"
                  >
                    <label
                      for="Position_input_Z"
                    >
                      Z
                    </label>
                     
                  </div>
                </div>
                <div
                  class="sc-iGgWBj kumTxJ"
                >
                  <div
                    arialabelledby="Position_input_Z Position_label"
                    controlid="Position_input_Z"
                    data-mocked="Input"
                    value="1.000"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            data-mocked="Box"
          >
            <div
              data-mocked="Box"
              margin="{"bottom":"xxs"}"
            >
              <label
                id="Rotation_label"
              >
                Rotation
              </label>
            </div>
             
            <div
              data-mocked="Grid"
              griddefinition="[{"colspan":4},{"colspan":4},{"colspan":4}]"
            >
              <div
                class="sc-gEvEer dfsMpp"
              >
                <div
                  class="sc-fqkvVR bxVbvh"
                >
                  <div
                    data-mocked="TextContent"
                  >
                    <label
                      for="Rotation_input_X"
                    >
                      X
                    </label>
                     
                  </div>
                </div>
                <div
                  class="sc-iGgWBj kumTxJ"
                >
                  <div
                    arialabelledby="Rotation_input_X Rotation_label"
                    controlid="Rotation_input_X"
                    data-mocked="Input"
                    value="0.000"
                  />
                </div>
              </div>
              <div
                class="sc-gEvEer dfsMpp"
              >
                <div
                  class="sc-fqkvVR bxVbvh"
                >
                  <div
                    data-mocked="TextContent"
                  >
                    <label
                      for="Rotation_input_Y"
                    >
                      Y
                    </label>
                     
                  </div>
                </div>
                <div
                  class="sc-iGgWBj kumTxJ"
                >
                  <div
                    arialabelledby="Rotation_input_Y Rotation_label"
                    controlid="Rotation_input_Y"
                    data-mocked="Input"
                    value="0.000"
                  />
                </div>
              </div>
              <div
                class="sc-gEvEer dfsMpp"
              >
                <div
                  class="sc-fqkvVR bxVbvh"
                >
                  <div
                    data-mocked="TextContent"
                  >
                    <label
                      for="Rotation_input_Z"
                    >
                      Z
                    </label>
                     
                  </div>
                </div>
                <div
                  class="sc-iGgWBj kumTxJ"
                >
                  <div
                    arialabelledby="Rotation_input_Z Rotation_label"
                    controlid="Rotation_input_Z"
                    data-mocked="Input"
                    value="0.000"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            data-mocked="Box"
          >
            <div
              data-mocked="Box"
              margin="{"bottom":"xxs"}"
            >
              <label
                id="Scale_label"
              >
                Scale
              </label>
            </div>
             
            <div
              data-mocked="Grid"
              griddefinition="[{"colspan":4},{"colspan":4},{"colspan":4}]"
            >
              <div
                class="sc-gEvEer dfsMpp"
              >
                <div
                  class="sc-fqkvVR bxVbvh"
                >
                  <div
                    data-mocked="TextContent"
                  >
                    <label
                      for="Scale_input_X"
                    >
                      X
                    </label>
                     
                  </div>
                </div>
                <div
                  class="sc-iGgWBj kumTxJ"
                >
                  <div
                    arialabelledby="Scale_input_X Scale_label"
                    controlid="Scale_input_X"
                    data-mocked="Input"
                    value="2.000"
                  />
                </div>
              </div>
              <div
                class="sc-gEvEer dfsMpp"
              >
                <div
                  class="sc-fqkvVR bxVbvh"
                >
                  <div
                    data-mocked="TextContent"
                  >
                    <label
                      for="Scale_input_Y"
                    >
                      Y
                    </label>
                     
                  </div>
                </div>
                <div
                  class="sc-iGgWBj kumTxJ"
                >
                  <div
                    arialabelledby="Scale_input_Y Scale_label"
                    controlid="Scale_input_Y"
                    data-mocked="Input"
                    value="2.000"
                  />
                </div>
              </div>
              <div
                class="sc-gEvEer dfsMpp"
              >
                <div
                  class="sc-fqkvVR bxVbvh"
                >
                  <div
                    data-mocked="TextContent"
                  >
                    <label
                      for="Scale_input_Z"
                    >
                      Z
                    </label>
                     
                  </div>
                </div>
                <div
                  class="sc-iGgWBj kumTxJ"
                >
                  <div
                    arialabelledby="Scale_input_Z Scale_label"
                    controlid="Scale_input_Z"
                    data-mocked="Input"
                    value="2.000"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            data-mocked="FormField"
            label="Constraints"
          >
            <div
              data-mocked="Checkbox"
            >
              Snap to floor
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="sc-gsFSXq dFvgUY"
      data-mocked="ExpandableSection"
    >
      <div>
        <div
          class="sc-dcJsrY ilhrxw"
        >
          <div
            data-mocked="TextContent"
          >
            <strong>
              Model Reference
            </strong>
          </div>
          <div
            data-testid="ComponentEditMenu"
          >
            [{"nodeRef":"testNodeRef","currentComponent":{"ref":"3D-obj-ref-1","type":"ModelRef"}},{}]
          </div>
        </div>
      </div>
      <div
        data-mocked="Box"
        padding="{"left":"m","right":"m","top":"xxs","bottom":"xxs"}"
      >
        <div
          data-testid="ComponentEditor"
        >
          [{"node":{"ref":"node-ref","properties":{},"childRefs":[],"name":"node-name","transform":{"position":[1,1,1],"rotation":[0,0,0],"scale":[2,2,2]},"transformConstraint":{"snapToFloor":true},"components":[{"ref":"3D-obj-ref-1","type":"ModelRef"}]},"component":{"ref":"3D-obj-ref-1","type":"ModelRef"}},{}]
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SceneNodeInspectorPanel returns expected elements. disable rotation, hide scale and render correct overlay section when selected scene node is Tag with Overlay panel. 1`] = `
<div>
  <div
    style="overflow: auto;"
  >
    <div
      data-testid="AddComponentMenu"
    >
      [{},{}]
    </div>
    <div
      class="sc-gsFSXq dFvgUY"
      data-mocked="ExpandableSection"
    >
      <div>
        <div
          class="sc-dcJsrY ilhrxw"
        >
          <div
            data-mocked="TextContent"
          >
            <strong>
              Debug Info
            </strong>
          </div>
        </div>
      </div>
      <div
        data-mocked="Box"
        padding="{"left":"m","right":"m","top":"xxs","bottom":"xxs"}"
      >
        <div
          data-mocked="SpaceBetween"
        >
          <div
            data-mocked="FormField"
            label="Ref"
          >
            <div
              data-mocked="Input"
              disabled=""
              value="node-ref"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="sc-gsFSXq dFvgUY"
      data-mocked="ExpandableSection"
    >
      <div>
        <div
          class="sc-dcJsrY ilhrxw"
        >
          <div
            data-mocked="TextContent"
          >
            <strong>
              Properties
            </strong>
          </div>
        </div>
      </div>
      <div
        data-mocked="Box"
        padding="{"left":"m","right":"m","top":"xxs","bottom":"xxs"}"
      >
        <div
          data-mocked="SpaceBetween"
        >
          <div
            data-mocked="FormField"
            label="Name"
          >
            <div
              data-mocked="Input"
              data-testid="ip-3D-obj-ref-1"
              value="node-name"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="sc-gsFSXq dFvgUY"
      data-mocked="ExpandableSection"
    >
      <div>
        <div
          class="sc-dcJsrY ilhrxw"
        >
          <div
            data-mocked="TextContent"
          >
            <strong>
              Transform
            </strong>
          </div>
        </div>
      </div>
      <div
        data-mocked="Box"
        padding="{"left":"m","right":"m","top":"xxs","bottom":"xxs"}"
      >
        <div
          data-mocked="SpaceBetween"
        >
          <div
            data-mocked="Box"
          >
            <div
              data-mocked="Box"
              margin="{"bottom":"xxs"}"
            >
              <label
                id="Position_label"
              >
                Position
              </label>
            </div>
             
            <div
              data-mocked="Grid"
              griddefinition="[{"colspan":4},{"colspan":4},{"colspan":4}]"
            >
              <div
                class="sc-gEvEer dfsMpp"
              >
                <div
                  class="sc-fqkvVR bxVbvh"
                >
                  <div
                    data-mocked="TextContent"
                  >
                    <label
                      for="Position_input_X"
                    >
                      X
                    </label>
                     
                  </div>
                </div>
                <div
                  class="sc-iGgWBj kumTxJ"
                >
                  <div
                    arialabelledby="Position_input_X Position_label"
                    controlid="Position_input_X"
                    data-mocked="Input"
                    value="1.000"
                  />
                </div>
              </div>
              <div
                class="sc-gEvEer dfsMpp"
              >
                <div
                  class="sc-fqkvVR bxVbvh"
                >
                  <div
                    data-mocked="TextContent"
                  >
                    <label
                      for="Position_input_Y"
                    >
                      Y
                    </label>
                     
                  </div>
                </div>
                <div
                  class="sc-iGgWBj kumTxJ"
                >
                  <div
                    arialabelledby="Position_input_Y Position_label"
                    controlid="Position_input_Y"
                    data-mocked="Input"
                    value="1.000"
                  />
                </div>
              </div>
              <div
                class="sc-gEvEer dfsMpp"
              >
                <div
                  class="sc-fqkvVR bxVbvh"
                >
                  <div
                    data-mocked="TextContent"
                  >
                    <label
                      for="Position_input_Z"
                    >
                      Z
                    </label>
                     
                  </div>
                </div>
                <div
                  class="sc-iGgWBj kumTxJ"
                >
                  <div
                    arialabelledby="Position_input_Z Position_label"
                    controlid="Position_input_Z"
                    data-mocked="Input"
                    value="1.000"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            data-mocked="Box"
          >
            <div
              data-mocked="Box"
              margin="{"bottom":"xxs"}"
            >
              <label
                id="Rotation_label"
              >
                Rotation
              </label>
            </div>
             
            <div
              data-mocked="Grid"
              griddefinition="[{"colspan":4},{"colspan":4},{"colspan":4}]"
            >
              <div
                class="sc-gEvEer dfsMpp"
              >
                <div
                  class="sc-fqkvVR bxVbvh"
                >
                  <div
                    data-mocked="TextContent"
                  >
                    <label
                      for="Rotation_input_X"
                    >
                      X
                    </label>
                     
                  </div>
                </div>
                <div
                  class="sc-iGgWBj kumTxJ"
                >
                  <div
                    arialabelledby="Rotation_input_X Rotation_label"
                    controlid="Rotation_input_X"
                    data-mocked="Input"
                    disabled=""
                    value="0.000"
                  />
                </div>
              </div>
              <div
                class="sc-gEvEer dfsMpp"
              >
                <div
                  class="sc-fqkvVR bxVbvh"
                >
                  <div
                    data-mocked="TextContent"
                  >
                    <label
                      for="Rotation_input_Y"
                    >
                      Y
                    </label>
                     
                  </div>
                </div>
                <div
                  class="sc-iGgWBj kumTxJ"
                >
                  <div
                    arialabelledby="Rotation_input_Y Rotation_label"
                    controlid="Rotation_input_Y"
                    data-mocked="Input"
                    disabled=""
                    value="0.000"
                  />
                </div>
              </div>
              <div
                class="sc-gEvEer dfsMpp"
              >
                <div
                  class="sc-fqkvVR bxVbvh"
                >
                  <div
                    data-mocked="TextContent"
                  >
                    <label
                      for="Rotation_input_Z"
                    >
                      Z
                    </label>
                     
                  </div>
                </div>
                <div
                  class="sc-iGgWBj kumTxJ"
                >
                  <div
                    arialabelledby="Rotation_input_Z Rotation_label"
                    controlid="Rotation_input_Z"
                    data-mocked="Input"
                    disabled=""
                    value="0.000"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="sc-gsFSXq dFvgUY"
      data-mocked="ExpandableSection"
    >
      <div>
        <div
          class="sc-dcJsrY ilhrxw"
        >
          <div
            data-mocked="TextContent"
          >
            <strong>
              Tag
            </strong>
          </div>
          <div
            data-testid="ComponentEditMenu"
          >
            [{"nodeRef":"testNodeRef","currentComponent":{"ref":"3D-obj-ref-1","type":"Tag"}},{}]
          </div>
        </div>
      </div>
      <div
        data-mocked="Box"
        padding="{"left":"m","right":"m","top":"xxs","bottom":"xxs"}"
      >
        <div
          data-testid="ComponentEditor"
        >
          [{"node":{"ref":"node-ref","properties":{},"childRefs":[],"name":"node-name","transform":{"position":[1,1,1],"rotation":[0,0,0],"scale":[2,2,2]},"transformConstraint":{"snapToFloor":false},"components":[{"ref":"3D-obj-ref-1","type":"Tag"},{"ref":"3D-obj-ref-2","type":"DataOverlay","subType":"OverlayPanel"}]},"component":{"ref":"3D-obj-ref-1","type":"Tag"}},{}]
        </div>
      </div>
    </div>
    <div
      class="sc-gsFSXq dFvgUY"
      data-mocked="ExpandableSection"
    >
      <div>
        <div
          class="sc-dcJsrY ilhrxw"
        >
          <div
            data-mocked="TextContent"
          >
            <strong>
              Overlay
            </strong>
          </div>
          <div
            data-testid="ComponentEditMenu"
          >
            [{"nodeRef":"testNodeRef","currentComponent":{"ref":"3D-obj-ref-2","type":"DataOverlay","subType":"OverlayPanel"}},{}]
          </div>
        </div>
      </div>
      <div
        data-mocked="Box"
        padding="{"left":"m","right":"m","top":"xxs","bottom":"xxs"}"
      >
        <div
          data-testid="ComponentEditor"
        >
          [{"node":{"ref":"node-ref","properties":{},"childRefs":[],"name":"node-name","transform":{"position":[1,1,1],"rotation":[0,0,0],"scale":[2,2,2]},"transformConstraint":{"snapToFloor":false},"components":[{"ref":"3D-obj-ref-1","type":"Tag"},{"ref":"3D-obj-ref-2","type":"DataOverlay","subType":"OverlayPanel"}]},"component":{"ref":"3D-obj-ref-2","type":"DataOverlay","subType":"OverlayPanel"}},{}]
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SceneNodeInspectorPanel returns expected elements. disable rotation, hide scale and render correct overlay section when selected scene node is Tag. 1`] = `
<div>
  <div
    style="overflow: auto;"
  >
    <div
      data-testid="AddComponentMenu"
    >
      [{},{}]
    </div>
    <div
      class="sc-gsFSXq dFvgUY"
      data-mocked="ExpandableSection"
    >
      <div>
        <div
          class="sc-dcJsrY ilhrxw"
        >
          <div
            data-mocked="TextContent"
          >
            <strong>
              Debug Info
            </strong>
          </div>
        </div>
      </div>
      <div
        data-mocked="Box"
        padding="{"left":"m","right":"m","top":"xxs","bottom":"xxs"}"
      >
        <div
          data-mocked="SpaceBetween"
        >
          <div
            data-mocked="FormField"
            label="Ref"
          >
            <div
              data-mocked="Input"
              disabled=""
              value="node-ref"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="sc-gsFSXq dFvgUY"
      data-mocked="ExpandableSection"
    >
      <div>
        <div
          class="sc-dcJsrY ilhrxw"
        >
          <div
            data-mocked="TextContent"
          >
            <strong>
              Properties
            </strong>
          </div>
        </div>
      </div>
      <div
        data-mocked="Box"
        padding="{"left":"m","right":"m","top":"xxs","bottom":"xxs"}"
      >
        <div
          data-mocked="SpaceBetween"
        >
          <div
            data-mocked="FormField"
            label="Name"
          >
            <div
              data-mocked="Input"
              data-testid="ip-3D-obj-ref-1"
              value="node-name"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="sc-gsFSXq dFvgUY"
      data-mocked="ExpandableSection"
    >
      <div>
        <div
          class="sc-dcJsrY ilhrxw"
        >
          <div
            data-mocked="TextContent"
          >
            <strong>
              Transform
            </strong>
          </div>
        </div>
      </div>
      <div
        data-mocked="Box"
        padding="{"left":"m","right":"m","top":"xxs","bottom":"xxs"}"
      >
        <div
          data-mocked="SpaceBetween"
        >
          <div
            data-mocked="Box"
          >
            <div
              data-mocked="Box"
              margin="{"bottom":"xxs"}"
            >
              <label
                id="Position_label"
              >
                Position
              </label>
            </div>
             
            <div
              data-mocked="Grid"
              griddefinition="[{"colspan":4},{"colspan":4},{"colspan":4}]"
            >
              <div
                class="sc-gEvEer dfsMpp"
              >
                <div
                  class="sc-fqkvVR bxVbvh"
                >
                  <div
                    data-mocked="TextContent"
                  >
                    <label
                      for="Position_input_X"
                    >
                      X
                    </label>
                     
                  </div>
                </div>
                <div
                  class="sc-iGgWBj kumTxJ"
                >
                  <div
                    arialabelledby="Position_input_X Position_label"
                    controlid="Position_input_X"
                    data-mocked="Input"
                    value="1.000"
                  />
                </div>
              </div>
              <div
                class="sc-gEvEer dfsMpp"
              >
                <div
                  class="sc-fqkvVR bxVbvh"
                >
                  <div
                    data-mocked="TextContent"
                  >
                    <label
                      for="Position_input_Y"
                    >
                      Y
                    </label>
                     
                  </div>
                </div>
                <div
                  class="sc-iGgWBj kumTxJ"
                >
                  <div
                    arialabelledby="Position_input_Y Position_label"
                    controlid="Position_input_Y"
                    data-mocked="Input"
                    value="1.000"
                  />
                </div>
              </div>
              <div
                class="sc-gEvEer dfsMpp"
              >
                <div
                  class="sc-fqkvVR bxVbvh"
                >
                  <div
                    data-mocked="TextContent"
                  >
                    <label
                      for="Position_input_Z"
                    >
                      Z
                    </label>
                     
                  </div>
                </div>
                <div
                  class="sc-iGgWBj kumTxJ"
                >
                  <div
                    arialabelledby="Position_input_Z Position_label"
                    controlid="Position_input_Z"
                    data-mocked="Input"
                    value="1.000"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            data-mocked="Box"
          >
            <div
              data-mocked="Box"
              margin="{"bottom":"xxs"}"
            >
              <label
                id="Rotation_label"
              >
                Rotation
              </label>
            </div>
             
            <div
              data-mocked="Grid"
              griddefinition="[{"colspan":4},{"colspan":4},{"colspan":4}]"
            >
              <div
                class="sc-gEvEer dfsMpp"
              >
                <div
                  class="sc-fqkvVR bxVbvh"
                >
                  <div
                    data-mocked="TextContent"
                  >
                    <label
                      for="Rotation_input_X"
                    >
                      X
                    </label>
                     
                  </div>
                </div>
                <div
                  class="sc-iGgWBj kumTxJ"
                >
                  <div
                    arialabelledby="Rotation_input_X Rotation_label"
                    controlid="Rotation_input_X"
                    data-mocked="Input"
                    disabled=""
                    value="0.000"
                  />
                </div>
              </div>
              <div
                class="sc-gEvEer dfsMpp"
              >
                <div
                  class="sc-fqkvVR bxVbvh"
                >
                  <div
                    data-mocked="TextContent"
                  >
                    <label
                      for="Rotation_input_Y"
                    >
                      Y
                    </label>
                     
                  </div>
                </div>
                <div
                  class="sc-iGgWBj kumTxJ"
                >
                  <div
                    arialabelledby="Rotation_input_Y Rotation_label"
                    controlid="Rotation_input_Y"
                    data-mocked="Input"
                    disabled=""
                    value="0.000"
                  />
                </div>
              </div>
              <div
                class="sc-gEvEer dfsMpp"
              >
                <div
                  class="sc-fqkvVR bxVbvh"
                >
                  <div
                    data-mocked="TextContent"
                  >
                    <label
                      for="Rotation_input_Z"
                    >
                      Z
                    </label>
                     
                  </div>
                </div>
                <div
                  class="sc-iGgWBj kumTxJ"
                >
                  <div
                    arialabelledby="Rotation_input_Z Rotation_label"
                    controlid="Rotation_input_Z"
                    data-mocked="Input"
                    disabled=""
                    value="0.000"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="sc-gsFSXq dFvgUY"
      data-mocked="ExpandableSection"
    >
      <div>
        <div
          class="sc-dcJsrY ilhrxw"
        >
          <div
            data-mocked="TextContent"
          >
            <strong>
              Tag
            </strong>
          </div>
          <div
            data-testid="ComponentEditMenu"
          >
            [{"nodeRef":"testNodeRef","currentComponent":{"ref":"3D-obj-ref-1","type":"Tag"}},{}]
          </div>
        </div>
      </div>
      <div
        data-mocked="Box"
        padding="{"left":"m","right":"m","top":"xxs","bottom":"xxs"}"
      >
        <div
          data-testid="ComponentEditor"
        >
          [{"node":{"ref":"node-ref","properties":{},"childRefs":[],"name":"node-name","transform":{"position":[1,1,1],"rotation":[0,0,0],"scale":[2,2,2]},"transformConstraint":{"snapToFloor":false},"components":[{"ref":"3D-obj-ref-1","type":"Tag"}]},"component":{"ref":"3D-obj-ref-1","type":"Tag"}},{}]
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SceneNodeInspectorPanel returns expected elements. disable scale and rotation when selected scene node is Annotation. 1`] = `
<div>
  <div
    style="overflow: auto;"
  >
    <div
      data-testid="AddComponentMenu"
    >
      [{},{}]
    </div>
    <div
      class="sc-gsFSXq dFvgUY"
      data-mocked="ExpandableSection"
    >
      <div>
        <div
          class="sc-dcJsrY ilhrxw"
        >
          <div
            data-mocked="TextContent"
          >
            <strong>
              Debug Info
            </strong>
          </div>
        </div>
      </div>
      <div
        data-mocked="Box"
        padding="{"left":"m","right":"m","top":"xxs","bottom":"xxs"}"
      >
        <div
          data-mocked="SpaceBetween"
        >
          <div
            data-mocked="FormField"
            label="Ref"
          >
            <div
              data-mocked="Input"
              disabled=""
              value="node-ref"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="sc-gsFSXq dFvgUY"
      data-mocked="ExpandableSection"
    >
      <div>
        <div
          class="sc-dcJsrY ilhrxw"
        >
          <div
            data-mocked="TextContent"
          >
            <strong>
              Properties
            </strong>
          </div>
        </div>
      </div>
      <div
        data-mocked="Box"
        padding="{"left":"m","right":"m","top":"xxs","bottom":"xxs"}"
      >
        <div
          data-mocked="SpaceBetween"
        >
          <div
            data-mocked="FormField"
            label="Name"
          >
            <div
              data-mocked="Input"
              data-testid="ip-3D-obj-ref-1"
              value="node-name"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="sc-gsFSXq dFvgUY"
      data-mocked="ExpandableSection"
    >
      <div>
        <div
          class="sc-dcJsrY ilhrxw"
        >
          <div
            data-mocked="TextContent"
          >
            <strong>
              Transform
            </strong>
          </div>
        </div>
      </div>
      <div
        data-mocked="Box"
        padding="{"left":"m","right":"m","top":"xxs","bottom":"xxs"}"
      >
        <div
          data-mocked="SpaceBetween"
        >
          <div
            data-mocked="Box"
          >
            <div
              data-mocked="Box"
              margin="{"bottom":"xxs"}"
            >
              <label
                id="Position_label"
              >
                Position
              </label>
            </div>
             
            <div
              data-mocked="Grid"
              griddefinition="[{"colspan":4},{"colspan":4},{"colspan":4}]"
            >
              <div
                class="sc-gEvEer dfsMpp"
              >
                <div
                  class="sc-fqkvVR bxVbvh"
                >
                  <div
                    data-mocked="TextContent"
                  >
                    <label
                      for="Position_input_X"
                    >
                      X
                    </label>
                     
                  </div>
                </div>
                <div
                  class="sc-iGgWBj kumTxJ"
                >
                  <div
                    arialabelledby="Position_input_X Position_label"
                    controlid="Position_input_X"
                    data-mocked="Input"
                    value="1.000"
                  />
                </div>
              </div>
              <div
                class="sc-gEvEer dfsMpp"
              >
                <div
                  class="sc-fqkvVR bxVbvh"
                >
                  <div
                    data-mocked="TextContent"
                  >
                    <label
                      for="Position_input_Y"
                    >
                      Y
                    </label>
                     
                  </div>
                </div>
                <div
                  class="sc-iGgWBj kumTxJ"
                >
                  <div
                    arialabelledby="Position_input_Y Position_label"
                    controlid="Position_input_Y"
                    data-mocked="Input"
                    value="1.000"
                  />
                </div>
              </div>
              <div
                class="sc-gEvEer dfsMpp"
              >
                <div
                  class="sc-fqkvVR bxVbvh"
                >
                  <div
                    data-mocked="TextContent"
                  >
                    <label
                      for="Position_input_Z"
                    >
                      Z
                    </label>
                     
                  </div>
                </div>
                <div
                  class="sc-iGgWBj kumTxJ"
                >
                  <div
                    arialabelledby="Position_input_Z Position_label"
                    controlid="Position_input_Z"
                    data-mocked="Input"
                    value="1.000"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            data-mocked="Box"
          >
            <div
              data-mocked="Box"
              margin="{"bottom":"xxs"}"
            >
              <label
                id="Rotation_label"
              >
                Rotation
              </label>
            </div>
             
            <div
              data-mocked="Grid"
              griddefinition="[{"colspan":4},{"colspan":4},{"colspan":4}]"
            >
              <div
                class="sc-gEvEer dfsMpp"
              >
                <div
                  class="sc-fqkvVR bxVbvh"
                >
                  <div
                    data-mocked="TextContent"
                  >
                    <label
                      for="Rotation_input_X"
                    >
                      X
                    </label>
                     
                  </div>
                </div>
                <div
                  class="sc-iGgWBj kumTxJ"
                >
                  <div
                    arialabelledby="Rotation_input_X Rotation_label"
                    controlid="Rotation_input_X"
                    data-mocked="Input"
                    disabled=""
                    value="0.000"
                  />
                </div>
              </div>
              <div
                class="sc-gEvEer dfsMpp"
              >
                <div
                  class="sc-fqkvVR bxVbvh"
                >
                  <div
                    data-mocked="TextContent"
                  >
                    <label
                      for="Rotation_input_Y"
                    >
                      Y
                    </label>
                     
                  </div>
                </div>
                <div
                  class="sc-iGgWBj kumTxJ"
                >
                  <div
                    arialabelledby="Rotation_input_Y Rotation_label"
                    controlid="Rotation_input_Y"
                    data-mocked="Input"
                    disabled=""
                    value="0.000"
                  />
                </div>
              </div>
              <div
                class="sc-gEvEer dfsMpp"
              >
                <div
                  class="sc-fqkvVR bxVbvh"
                >
                  <div
                    data-mocked="TextContent"
                  >
                    <label
                      for="Rotation_input_Z"
                    >
                      Z
                    </label>
                     
                  </div>
                </div>
                <div
                  class="sc-iGgWBj kumTxJ"
                >
                  <div
                    arialabelledby="Rotation_input_Z Rotation_label"
                    controlid="Rotation_input_Z"
                    data-mocked="Input"
                    disabled=""
                    value="0.000"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            data-mocked="Box"
          >
            <div
              data-mocked="Box"
              margin="{"bottom":"xxs"}"
            >
              <label
                id="Scale_label"
              >
                Scale
              </label>
            </div>
             
            <div
              data-mocked="Grid"
              griddefinition="[{"colspan":4},{"colspan":4},{"colspan":4}]"
            >
              <div
                class="sc-gEvEer dfsMpp"
              >
                <div
                  class="sc-fqkvVR bxVbvh"
                >
                  <div
                    data-mocked="TextContent"
                  >
                    <label
                      for="Scale_input_X"
                    >
                      X
                    </label>
                     
                  </div>
                </div>
                <div
                  class="sc-iGgWBj kumTxJ"
                >
                  <div
                    arialabelledby="Scale_input_X Scale_label"
                    controlid="Scale_input_X"
                    data-mocked="Input"
                    disabled=""
                    value="2.000"
                  />
                </div>
              </div>
              <div
                class="sc-gEvEer dfsMpp"
              >
                <div
                  class="sc-fqkvVR bxVbvh"
                >
                  <div
                    data-mocked="TextContent"
                  >
                    <label
                      for="Scale_input_Y"
                    >
                      Y
                    </label>
                     
                  </div>
                </div>
                <div
                  class="sc-iGgWBj kumTxJ"
                >
                  <div
                    arialabelledby="Scale_input_Y Scale_label"
                    controlid="Scale_input_Y"
                    data-mocked="Input"
                    disabled=""
                    value="2.000"
                  />
                </div>
              </div>
              <div
                class="sc-gEvEer dfsMpp"
              >
                <div
                  class="sc-fqkvVR bxVbvh"
                >
                  <div
                    data-mocked="TextContent"
                  >
                    <label
                      for="Scale_input_Z"
                    >
                      Z
                    </label>
                     
                  </div>
                </div>
                <div
                  class="sc-iGgWBj kumTxJ"
                >
                  <div
                    arialabelledby="Scale_input_Z Scale_label"
                    controlid="Scale_input_Z"
                    data-mocked="Input"
                    disabled=""
                    value="2.000"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="sc-gsFSXq dFvgUY"
      data-mocked="ExpandableSection"
    >
      <div>
        <div
          class="sc-dcJsrY ilhrxw"
        >
          <div
            data-mocked="TextContent"
          >
            <strong>
              Annotation
            </strong>
          </div>
          <div
            data-testid="ComponentEditMenu"
          >
            [{"nodeRef":"testNodeRef","currentComponent":{"ref":"3D-obj-ref-1","type":"DataOverlay","subType":"TextAnnotation"}},{}]
          </div>
        </div>
      </div>
      <div
        data-mocked="Box"
        padding="{"left":"m","right":"m","top":"xxs","bottom":"xxs"}"
      >
        <div
          data-testid="ComponentEditor"
        >
          [{"node":{"ref":"node-ref","properties":{},"childRefs":[],"name":"node-name","transform":{"position":[1,1,1],"rotation":[0,0,0],"scale":[2,2,2]},"transformConstraint":{"snapToFloor":false},"components":[{"ref":"3D-obj-ref-1","type":"DataOverlay","subType":"TextAnnotation"}]},"component":{"ref":"3D-obj-ref-1","type":"DataOverlay","subType":"TextAnnotation"}},{}]
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SceneNodeInspectorPanel returns expected elements. disable y scale when selected scene node is LinearPlane motion indicator. 1`] = `
<div>
  <div
    style="overflow: auto;"
  >
    <div
      data-testid="AddComponentMenu"
    >
      [{},{}]
    </div>
    <div
      class="sc-gsFSXq dFvgUY"
      data-mocked="ExpandableSection"
    >
      <div>
        <div
          class="sc-dcJsrY ilhrxw"
        >
          <div
            data-mocked="TextContent"
          >
            <strong>
              Debug Info
            </strong>
          </div>
        </div>
      </div>
      <div
        data-mocked="Box"
        padding="{"left":"m","right":"m","top":"xxs","bottom":"xxs"}"
      >
        <div
          data-mocked="SpaceBetween"
        >
          <div
            data-mocked="FormField"
            label="Ref"
          >
            <div
              data-mocked="Input"
              disabled=""
              value="node-ref"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="sc-gsFSXq dFvgUY"
      data-mocked="ExpandableSection"
    >
      <div>
        <div
          class="sc-dcJsrY ilhrxw"
        >
          <div
            data-mocked="TextContent"
          >
            <strong>
              Properties
            </strong>
          </div>
        </div>
      </div>
      <div
        data-mocked="Box"
        padding="{"left":"m","right":"m","top":"xxs","bottom":"xxs"}"
      >
        <div
          data-mocked="SpaceBetween"
        >
          <div
            data-mocked="FormField"
            label="Name"
          >
            <div
              data-mocked="Input"
              data-testid="ip-3D-obj-ref-1"
              value="node-name"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="sc-gsFSXq dFvgUY"
      data-mocked="ExpandableSection"
    >
      <div>
        <div
          class="sc-dcJsrY ilhrxw"
        >
          <div
            data-mocked="TextContent"
          >
            <strong>
              Transform
            </strong>
          </div>
        </div>
      </div>
      <div
        data-mocked="Box"
        padding="{"left":"m","right":"m","top":"xxs","bottom":"xxs"}"
      >
        <div
          data-mocked="SpaceBetween"
        >
          <div
            data-mocked="Box"
          >
            <div
              data-mocked="Box"
              margin="{"bottom":"xxs"}"
            >
              <label
                id="Position_label"
              >
                Position
              </label>
            </div>
             
            <div
              data-mocked="Grid"
              griddefinition="[{"colspan":4},{"colspan":4},{"colspan":4}]"
            >
              <div
                class="sc-gEvEer dfsMpp"
              >
                <div
                  class="sc-fqkvVR bxVbvh"
                >
                  <div
                    data-mocked="TextContent"
                  >
                    <label
                      for="Position_input_X"
                    >
                      X
                    </label>
                     
                  </div>
                </div>
                <div
                  class="sc-iGgWBj kumTxJ"
                >
                  <div
                    arialabelledby="Position_input_X Position_label"
                    controlid="Position_input_X"
                    data-mocked="Input"
                    value="1.000"
                  />
                </div>
              </div>
              <div
                class="sc-gEvEer dfsMpp"
              >
                <div
                  class="sc-fqkvVR bxVbvh"
                >
                  <div
                    data-mocked="TextContent"
                  >
                    <label
                      for="Position_input_Y"
                    >
                      Y
                    </label>
                     
                  </div>
                </div>
                <div
                  class="sc-iGgWBj kumTxJ"
                >
                  <div
                    arialabelledby="Position_input_Y Position_label"
                    controlid="Position_input_Y"
                    data-mocked="Input"
                    value="1.000"
                  />
                </div>
              </div>
              <div
                class="sc-gEvEer dfsMpp"
              >
                <div
                  class="sc-fqkvVR bxVbvh"
                >
                  <div
                    data-mocked="TextContent"
                  >
                    <label
                      for="Position_input_Z"
                    >
                      Z
                    </label>
                     
                  </div>
                </div>
                <div
                  class="sc-iGgWBj kumTxJ"
                >
                  <div
                    arialabelledby="Position_input_Z Position_label"
                    controlid="Position_input_Z"
                    data-mocked="Input"
                    value="1.000"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            data-mocked="Box"
          >
            <div
              data-mocked="Box"
              margin="{"bottom":"xxs"}"
            >
              <label
                id="Rotation_label"
              >
                Rotation
              </label>
            </div>
             
            <div
              data-mocked="Grid"
              griddefinition="[{"colspan":4},{"colspan":4},{"colspan":4}]"
            >
              <div
                class="sc-gEvEer dfsMpp"
              >
                <div
                  class="sc-fqkvVR bxVbvh"
                >
                  <div
                    data-mocked="TextContent"
                  >
                    <label
                      for="Rotation_input_X"
                    >
                      X
                    </label>
                     
                  </div>
                </div>
                <div
                  class="sc-iGgWBj kumTxJ"
                >
                  <div
                    arialabelledby="Rotation_input_X Rotation_label"
                    controlid="Rotation_input_X"
                    data-mocked="Input"
                    value="0.000"
                  />
                </div>
              </div>
              <div
                class="sc-gEvEer dfsMpp"
              >
                <div
                  class="sc-fqkvVR bxVbvh"
                >
                  <div
                    data-mocked="TextContent"
                  >
                    <label
                      for="Rotation_input_Y"
                    >
                      Y
                    </label>
                     
                  </div>
                </div>
                <div
                  class="sc-iGgWBj kumTxJ"
                >
                  <div
                    arialabelledby="Rotation_input_Y Rotation_label"
                    controlid="Rotation_input_Y"
                    data-mocked="Input"
                    value="0.000"
                  />
                </div>
              </div>
              <div
                class="sc-gEvEer dfsMpp"
              >
                <div
                  class="sc-fqkvVR bxVbvh"
                >
                  <div
                    data-mocked="TextContent"
                  >
                    <label
                      for="Rotation_input_Z"
                    >
                      Z
                    </label>
                     
                  </div>
                </div>
                <div
                  class="sc-iGgWBj kumTxJ"
                >
                  <div
                    arialabelledby="Rotation_input_Z Rotation_label"
                    controlid="Rotation_input_Z"
                    data-mocked="Input"
                    value="0.000"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            data-mocked="Box"
          >
            <div
              data-mocked="Box"
              margin="{"bottom":"xxs"}"
            >
              <label
                id="Scale_label"
              >
                Scale
              </label>
            </div>
             
            <div
              data-mocked="Grid"
              griddefinition="[{"colspan":4},{"colspan":4},{"colspan":4}]"
            >
              <div
                class="sc-gEvEer dfsMpp"
              >
                <div
                  class="sc-fqkvVR bxVbvh"
                >
                  <div
                    data-mocked="TextContent"
                  >
                    <label
                      for="Scale_input_X"
                    >
                      X
                    </label>
                     
                  </div>
                </div>
                <div
                  class="sc-iGgWBj kumTxJ"
                >
                  <div
                    arialabelledby="Scale_input_X Scale_label"
                    controlid="Scale_input_X"
                    data-mocked="Input"
                    value="2.000"
                  />
                </div>
              </div>
              <div
                class="sc-gEvEer dfsMpp"
              >
                <div
                  class="sc-fqkvVR bxVbvh"
                >
                  <div
                    data-mocked="TextContent"
                  >
                    <label
                      for="Scale_input_Y"
                    >
                      Y
                    </label>
                     
                  </div>
                </div>
                <div
                  class="sc-iGgWBj kumTxJ"
                >
                  <div
                    arialabelledby="Scale_input_Y Scale_label"
                    controlid="Scale_input_Y"
                    data-mocked="Input"
                    disabled=""
                    value="2.000"
                  />
                </div>
              </div>
              <div
                class="sc-gEvEer dfsMpp"
              >
                <div
                  class="sc-fqkvVR bxVbvh"
                >
                  <div
                    data-mocked="TextContent"
                  >
                    <label
                      for="Scale_input_Z"
                    >
                      Z
                    </label>
                     
                  </div>
                </div>
                <div
                  class="sc-iGgWBj kumTxJ"
                >
                  <div
                    arialabelledby="Scale_input_Z Scale_label"
                    controlid="Scale_input_Z"
                    data-mocked="Input"
                    value="2.000"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="sc-gsFSXq dFvgUY"
      data-mocked="ExpandableSection"
    >
      <div>
        <div
          class="sc-dcJsrY ilhrxw"
        >
          <div
            data-mocked="TextContent"
          >
            <strong>
              Motion Indicator
            </strong>
          </div>
          <div
            data-testid="ComponentEditMenu"
          >
            [{"nodeRef":"testNodeRef","currentComponent":{"ref":"3D-obj-ref-1","type":"MotionIndicator","shape":"LinearPlane"}},{}]
          </div>
        </div>
      </div>
      <div
        data-mocked="Box"
        padding="{"left":"m","right":"m","top":"xxs","bottom":"xxs"}"
      >
        <div
          data-testid="ComponentEditor"
        >
          [{"node":{"ref":"node-ref","properties":{},"childRefs":[],"name":"node-name","transform":{"position":[1,1,1],"rotation":[0,0,0],"scale":[2,2,2]},"transformConstraint":{"snapToFloor":false},"components":[{"ref":"3D-obj-ref-1","type":"MotionIndicator","shape":"LinearPlane"}]},"component":{"ref":"3D-obj-ref-1","type":"MotionIndicator","shape":"LinearPlane"}},{}]
        </div>
      </div>
    </div>
  </div>
</div>
`;
